--- a/AtroposGame/Properties/AndroidManifest.xml
+++ b/AtroposGame/Properties/AndroidManifest.xml
@@ -20,4 +20,12 @@
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 	<application android:allowBackup="true" android:label="@string/app_name" android:icon="@drawable/atropos_sigil"></application>
+  <activity
+    android:name=".SplashActivity"
+    android:theme="@style/SplashTheme">
+    <intent-filter>
+      <action android:name="android.intent.action.MAIN" />
+      <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+  </activity>
 </manifest>
