--- a/AtroposGame/AtroposGame.csproj
+++ b/AtroposGame/AtroposGame.csproj
@@ -165,7 +165,7 @@
     <Compile Include="Data Structures\DatapointT.cs" />
     <Compile Include="Data Structures\DatapointT1T2.cs" />
     <Compile Include="Data Structures\IDatapoint.cs" />
-    <Compile Include="Encounters.cs" />
+    <Compile Include="Encounters\Encounters.cs" />
     <Compile Include="External Code\Ordered Dictionary.cs" />
     <Compile Include="External Code\SimpleFileDialog.cs" />
     <Compile Include="External Code\TimedLock.cs" />
@@ -180,9 +180,11 @@
     <Compile Include="Lock Training Activity.cs" />
     <Compile Include="LockedObjectDefinitions.cs" />
     <Compile Include="LockOpeningActivities.cs" />
+    <Compile Include="Encounters\DodgingBackgroundStage.cs" />
     <Compile Include="LoggingProvider.cs" />
     <Compile Include="Machine Learning\ButtonLogic.cs" />
     <Compile Include="Machine Learning\Classifier.cs" />
+    <Compile Include="Machine Learning\CueProvider.cs" />
     <Compile Include="Machine Learning\DataSet.cs" />
     <Compile Include="Machine Learning\FeatureT.cs" />
     <Compile Include="Machine Learning\FigureOfMerit.cs" />
