--- a/AtroposGame/packages.config
+++ b/AtroposGame/packages.config
@@ -4,6 +4,7 @@
   <package id="Accord.MachineLearning" version="3.8.0" targetFramework="monoandroid71" />
   <package id="Accord.Math" version="3.8.0" targetFramework="monoandroid71" />
   <package id="Accord.Statistics" version="3.8.0" targetFramework="monoandroid71" />
+  <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid71" />
@@ -22,4 +23,5 @@
   <package id="Xamarin.Android.Support.v4" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="ZXing.Net.Mobile" version="2.3.2" targetFramework="monoandroid71" />
 </packages>
